# coursework-ib

./: .gitignore  admin_power.sh  docker-compose.yml  final_fix_v3.sh
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: main.rs
backend/src/models/: audit.rs  comment.rs  document.rs  mod.rs  user.rs
backend/src/utils/: crypto_ffi.rs  mod.rs
crypto-lib/src/: crypto.cpp  crypto.h
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
