[package]
name = "ib_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
env_logger = "0.11"

[build-dependencies]
cc = "1.0"
